--- a/OriginArtPro/proj.win32/OriginArtPro.vcxproj
+++ b/OriginArtPro/proj.win32/OriginArtPro.vcxproj
@@ -150,7 +150,8 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\prebuilt\win32\*.*" "$(OutDir)"
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\origin\state\OExclusion.cpp" />
     <ClCompile Include="..\Classes\origin\state\OState.cpp" />
-    <ClCompile Include="..\Classes\origin\structure\OStack.cpp" />
+    <ClCompile Include="..\Classes\origin\state\OStateQueue.cpp" />
+    <ClCompile Include="..\Classes\origin\state\OStateStack.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -163,6 +164,9 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\prebuilt\win32\*.*" "$(OutDir)"
     <ClInclude Include="..\Classes\origin\OriginMacros.h" />
     <ClInclude Include="..\Classes\origin\state\OExclusion.h" />
     <ClInclude Include="..\Classes\origin\state\OState.h" />
+    <ClInclude Include="..\Classes\origin\state\OStateQueue.h" />
+    <ClInclude Include="..\Classes\origin\state\OStateStack.h" />
+    <ClInclude Include="..\Classes\origin\structure\OQueue.h" />
     <ClInclude Include="..\Classes\origin\structure\OStack.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
