--- a/OriginArtPro/proj.win32/OriginArtPro.vcxproj
+++ b/OriginArtPro/proj.win32/OriginArtPro.vcxproj
@@ -71,7 +71,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\cocos\audio\include;$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\external;$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\external\chipmunk\include\chipmunk;$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\extensions;..\Classes\origin\state;..\Classes\origin\structure;..\Classes\origin\memory;..\Classes\origin\base;..\Classes\origin;..\Classes;..;%(AdditionalIncludeDirectories);$(_COCOS_HEADER_WIN32_BEGIN);$(_COCOS_HEADER_WIN32_END)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\cocos\audio\include;$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\external;$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\external\chipmunk\include\chipmunk;$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\extensions;..\Classes\originGame\unit;..\Classes\originGame;..\Classes\origin\state\lifeCircle;..\Classes\origin\state;..\Classes\origin\structure;..\Classes\origin\memory;..\Classes\origin\base;..\Classes\origin;..\Classes;..;%(AdditionalIncludeDirectories);$(_COCOS_HEADER_WIN32_BEGIN);$(_COCOS_HEADER_WIN32_END)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_WINDOWS;_USE_MATH_DEFINES;GL_GLEXT_PROTOTYPES;CC_ENABLE_CHIPMUNK_INTEGRATION=1;COCOS2D_DEBUG=1;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>false</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -148,7 +148,11 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\prebuilt\win32\*.*" "$(OutDir)"
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="..\Classes\originGame\unit\OGUnit.cpp" />
+    <ClCompile Include="..\Classes\originGame\unit\OGUnitDefiniation.cpp" />
+    <ClCompile Include="..\Classes\originGame\unit\OGUnitStateDefiniation.cpp" />
     <ClCompile Include="..\Classes\origin\state\lifeCircle\OLifeCircle.cpp" />
+    <ClCompile Include="..\Classes\origin\state\lifeCircle\OLifeCircleBehavior.cpp" />
     <ClCompile Include="..\Classes\origin\state\lifeCircle\OLifeCircleTrigger.cpp" />
     <ClCompile Include="..\Classes\origin\state\OExclusion.cpp" />
     <ClCompile Include="..\Classes\origin\state\OParallelQueue.cpp" />
@@ -162,12 +166,16 @@ xcopy /Y /Q "$(COCOS_FRAMEWORKS)\cocos2d-x-3.9\prebuilt\win32\*.*" "$(OutDir)"
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\originGame\originGame.h" />
     <ClInclude Include="..\Classes\originGame\OriginGameMacros.h" />
+    <ClInclude Include="..\Classes\originGame\unit\OGUnit.h" />
+    <ClInclude Include="..\Classes\originGame\unit\OGUnitDefiniation.h" />
+    <ClInclude Include="..\Classes\originGame\unit\OGUnitStateDefiniation.h" />
     <ClInclude Include="..\Classes\origin\base\oConfig.h" />
     <ClInclude Include="..\Classes\origin\memory\ODeque.h" />
     <ClInclude Include="..\Classes\origin\memory\OList.h" />
     <ClInclude Include="..\Classes\origin\origin.h" />
     <ClInclude Include="..\Classes\origin\OriginMacros.h" />
     <ClInclude Include="..\Classes\origin\state\lifeCircle\OLifeCircle.h" />
+    <ClInclude Include="..\Classes\origin\state\lifeCircle\OLifeCircleBehavior.h" />
     <ClInclude Include="..\Classes\origin\state\lifeCircle\OLifeCircleTrigger.h" />
     <ClInclude Include="..\Classes\origin\state\OExclusion.h" />
     <ClInclude Include="..\Classes\origin\state\OParallelQueue.h" />
